--- a/demo/fullscreen.html
+++ b/demo/fullscreen.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="../addon/display/fullscreen.css">
 <link rel="stylesheet" href="../theme/night.css">
 <script src="../lib/codemirror.js"></script>
+<script src="../keymap/emacs.js"></script>
 <script src="../mode/xml/xml.js"></script>
 <script src="../addon/display/fullscreen.js"></script>
 
